# dsp-ontologies

./: .gitignore  Makefile  README.md  WORKSPACE  requirements.txt  validateMetadata.py
.github/workflows/: main.yml
documentation/: datastructure.dot
dsp-repository/v1/: BUILD.bazel  dsp-repository.owl.ttl  dsp-repository.shacl.ttl  dsp-repository.ttl
example/: example-metadata-maximal.ttl  example-metadata-minimal.ttl  example-metadata.ttl
test/: BUILD.bazel  test_dataManagementPlaneShape.py  test_datasetShape.py  test_funderShape.py  test_grantShape.py  test_organizationShape.py  test_personShape.py  test_projectShape.py
test/test_data/: incorrect_metadata_project.ttl  organization.ttl  person.ttl  prefix_list.ttl  project.ttl
